replaced favicon and placed it in /static

--- a/static/todos.html
+++ b/static/todos.html
@@ -2,7 +2,11 @@
 <html ng-app="TodolovinApp">
 	<head>
 		<title>Todolovin | Todo List</title>
-		<link rel="shortcut icon" href="static/images/favicon.ico">
+		
+		<meta name="author" content="Alexandra Berke">
+		<link rel="shortcut icon" href="static/favicon.ico" type="image/x-icon">
+<!-- 		<link rel="shortcut icon" type="image/x-icon" href="http://alexandraberke.com/favicon.ico" /> -->
+		
 		<link rel="stylesheet" href="/static/css/todos.css" />
 		<script src="http://code.angularjs.org/1.0.6/angular.min.js"></script>
         <script src="/static/js/todolovin.js"></script>
